[gd_scene load_steps=6 format=3 uid="uid://cp3tdf7u326yb"]

[ext_resource type="Script" path="res://options_menu.gd" id="1_7q75k"]
[ext_resource type="FontFile" uid="uid://bxeltypwj0ncy" path="res://art/Bungee-Regular.ttf" id="2_fh2iq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgk01"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_511ca"]
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oi78x"]
bg_color = Color(0, 0, 0, 0.686275)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="LevelMenu" type="Node"]
script = ExtResource("1_7q75k")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.341176, 0.396078, 0.811765, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_fh2iq")
theme_override_font_sizes/font_size = 80
text = "Tower Defence"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 324)
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="EasyButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_fh2iq")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dgk01")
theme_override_styles/hover = SubResource("StyleBoxFlat_511ca")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oi78x")
text = "easy"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="MediumButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_fh2iq")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dgk01")
theme_override_styles/hover = SubResource("StyleBoxFlat_511ca")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oi78x")
text = "medium"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HardButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_fh2iq")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dgk01")
theme_override_styles/hover = SubResource("StyleBoxFlat_511ca")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oi78x")
text = "hard"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_fh2iq")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dgk01")
theme_override_styles/hover = SubResource("StyleBoxFlat_511ca")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oi78x")
text = "back"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/EasyButton" to="." method="_on_easy_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/MediumButton" to="." method="_on_medium_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4/HardButton" to="." method="_on_hard_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/BackButton" to="." method="_on_back_button_button_up"]
